--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -774,6 +774,9 @@
   <string name="suggested_edits_reactivation_notification_title">Title of notification when the user has not edited for days.</string>
   <string name="suggested_edits_reactivation_notification_stage_one">Text of notification when the user has not edited for days (first stage).</string>
   <string name="suggested_edits_reactivation_notification_stage_two">Text of notification when the user has not edited for days (second stage).</string>
+  <string name="suggested_edits_encourage_account_creation_card_title">Title text of the encourage account creation card.</string>
+  <string name="suggested_edits_encourage_account_creation_card_content">Content text of the encourage account creation card.</string>
+  <string name="suggested_edits_encourage_account_creation_card_login_button">Button text of the encourage account creation card log in button.</string>
   <string name="file_page_activity_title">Title shown at the top of the activity for the file page.</string>
   <string name="description_edit_revert_subtitle">Subtitle in the dialog that informs the user that their edit was reverted.</string>
   <string name="description_edit_revert_intro">Introduction message informing the user that their edit was reverted, and leading into possible reasons for the revert.</string>
