--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,7 @@
     <string name="reading_lists_sync_login">Log in</string>
     <string name="create_account_login">Log in</string>
     <string name="menu_login">Log in</string>
-    <string name="login_activity_title">Log in to Wikipedia</string>
+    <string name="login_activity_title">Log in</string>
     <string name="login_in_progress_dialog_message">Logging you in…</string>
     <string name="login_success_toast">Logged in!</string>
     <string name="reset_password_title">Set your password</string>
