--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -767,6 +767,7 @@
     <string name="suggested_edits_ip_blocked_message">It looks like your IP address (or range of IP addresses) is currently blocked from editing Wikipedia. Learn more about what this means by visiting the link below.</string>
     <string name="suggested_edits_editing_tips_link_text">Editing tips and tricks</string>
     <string name="suggested_edits_help_page_link_text">Suggested edits help page</string>
+    <string name="suggested_edits_learn_more_button_text">Learn more</string>
     <string name="suggested_edits_edit_streak_label_text">Edit streak</string>
     <string name="suggested_edits_pageviews_label_text">Pageviews</string>
     <string name="suggested_edits_quality_label_text">Edit quality</string>
