--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -882,7 +882,7 @@
   <string name="suggested_edits_contribution_language_label">Text label indicating that the associated data indicates the language of the user contribution.</string>
   <string name="suggested_edits_contribution_date_time_label">Text label indicating that the associated data indicates the date and time of the user contribution.</string>
   <string name="suggested_edits_contribution_type_label">Text label indicating that the associated data indicates the type of the user contribution.</string>
-  <string name="suggested_edits_contribution_label">Text summarizing the user\'s contribution to the article or image. %d represents the number of characters contributed.</string>
+  <string name="suggested_edits_added_contribution_label">Text summarizing the user\'s contribution to the article or image. %d represents the number of characters contributed.</string>
   <string name="suggested_edits_contribution_views">Text label indicating that the associated data indicates the number of views that the contribution has. %s represents the type of contribution.</string>
   <string name="suggested_edits_contribution_image_label">Text label that indicates that the contribution is to an image file.</string>
   <string name="suggested_edits_contribution_article_label">Text label that indicates that the contribution is to an article.</string>
@@ -891,4 +891,5 @@
     <item quantity="other">Text summarizing the user\'s image tag contribution. %d represents the number of tags contributed.</item>
   </plurals>
   <string name="suggested_edits_contribution_current_revision">Text indicating that the user\'s contribution is the most current edit on that file or article.</string>
+  <string name="suggested_edits_removed_contribution_label">Text summarizing the user\'s contribution to the article or image. %d represents the number of characters removed by the contributed.</string>
 </resources>
