--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -892,4 +892,8 @@
   </plurals>
   <string name="suggested_edits_contribution_current_revision">Text indicating that the user\'s contribution is the most current edit on that file or article.</string>
   <string name="suggested_edits_removed_contribution_label">Text summarizing the user\'s contribution to the article or image. %d represents the number of characters removed by the contributed.</string>
+  <plurals name="suggested_edits_contribution_diff_count_text">
+    <item quantity="one">Label text indicating the number of characters added or removed by a user contribution. %1$s represents the sign and %2$d represents the number</item>
+    <item quantity="other">Label text indicating the number of characters added or removed by a user contribution. %1$s represents the sign and %2$d represents the number</item>
+  </plurals>
 </resources>
